--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Teagan Codes</title>
         <meta name="description" content="Teagan Codes">
         <meta name="Teagan Schluter" content="SheCodes">
-        <link rel="stylesheet" href="ts-styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -19,7 +19,7 @@
             <nav>
                 <a href="ts-form-index.html">Contact</a>
                 <a href="https://www.linkedin.com/in/teagan-schluter/.html">Linked In</a>
-                <a href="https://github.com/login.html">GitHub</a>
+                <a href="https://t-schluter.github.io/">GitHub</a>
             </nav>
         </header>
 
