portfolio boxes added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div>
             <div>
-                <h3> Teagan Bio</h3>
+                <h2> Teagan Bio</h2>
                 <p>
                     I am currently a Fixed Plant Controller for BHP’s Integrated Remote Operations Center, currently residing in Brisbane. I have a passion for data and it has been there through my entire professional career, starting as a laboratory technician, through to water treatment operator for Origin energy and now as a fixed plant controller.
 
@@ -38,6 +38,12 @@ Outside of work I value the following, good food, good wine, good company. I do 
                 </p>
 
         </div>
+
+        <h2>My Portfolio</h2>
+            <div class= "portfolio-item-1">Portfolio item 1</div>
+            <div class= "portfolio-item-2">Portfolio item 2</div>
+            <div class= "portfolio-item-3">Portfolio item 3</div>
+            <div class= "portfolio-item-4">Portfolio item 4</div>
 
         <footer>
             Teagan Schluter 2020
