media deviation added

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
         <meta name="description" content="Teagan Codes">
         <meta name="Teagan Schluter" content="SheCodes">
         <link rel="stylesheet" href="styles.css">
+        <meta name= "viewport" content="width=device-width,initial-scale=1.0">
     </head>
 
     <body>
 
         <header>
-            <h1>Hi I'm Teagan</h1>
+            <h1>Hello World, I'm Teagan</h1>
             <div>            
                 <img src="images/profile-photo.jpg" alt="Profile" id=photo>
             </div>
@@ -25,8 +26,8 @@
 
 
         <div>
-            <div>
-                <h2> Teagan Bio</h2>
+            <section>
+                <h2> About Me</h2>
                 <p>
                     I am currently a Fixed Plant Controller for BHP’s Integrated Remote Operations Center, currently residing in Brisbane. I have a passion for data and it has been there through my entire professional career, starting as a laboratory technician, through to water treatment operator for Origin energy and now as a fixed plant controller.
 
@@ -37,7 +38,7 @@ I am participating in SHE{CODES} Plus course to learn coding skills to further m
 Outside of work I value the following, good food, good wine, good company. I do enjoy travelling and trying new life experiences, my bucket list is a bit long but getting there. I have a soft spot for animals and in particular my black and white cat Boots.
                 </p>
 
-        </div>
+        </section>
 
         <h2>My Portfolio</h2>
             <div class= "portfolio-item-1">Portfolio item 1</div>
