Media div with nav buttons

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <img src="images/profile-photo.jpg" alt="Profile" id=photo>
             </div>
             <nav>
-                <a href="ts-form-index.html">Contact</a>
-                <a href="https://www.linkedin.com/in/teagan-schluter/.html">Linked In</a>
-                <a href="https://t-schluter.github.io/">GitHub</a>
+                <div class="button"><a href="ts-form-index.html">Contact</a></div>
+                <div class="button"><a href="https://www.linkedin.com/in/teagan-schluter/.html">Linked In</a></div>
+                <div class="button"><a href="https://t-schluter.github.io/">GitHub</a></div>
             </nav>
         </header>
 
 
-        <div>
+        <main>
             <section>
                 <h2> About Me</h2>
                 <p>
@@ -40,15 +40,19 @@ Outside of work I value the following, good food, good wine, good company. I do 
 
         </section>
 
+        <section>
         <h2>My Portfolio</h2>
-            <div class= "portfolio-item-1">Portfolio item 1</div>
-            <div class= "portfolio-item-2">Portfolio item 2</div>
-            <div class= "portfolio-item-3">Portfolio item 3</div>
-            <div class= "portfolio-item-4">Portfolio item 4</div>
+            <div class= "portfolio-item">Portfolio item 1</div>
+            <div class= "portfolio-item">Portfolio item 2</div>
+            <div class= "portfolio-item">Portfolio item 3</div>
+            <div class= "portfolio-item">Portfolio item 4</div>
+        </section>
 
-        <footer>
-            Teagan Schluter 2020
-        </footer>
+    </main>
+
+     <footer>
+         Teagan Schluter 2020
+    </footer>
 
     </body>
 
