--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <p>
                     I am currently a Fixed Plant Controller for BHP’s Integrated Remote Operations Center, currently residing in Brisbane. I have a passion for data and it has been there through my entire professional career, starting as a laboratory technician, through to water treatment operator for Origin energy and now as a fixed plant controller.
 
-I have 8 years processing experience across multiple control systems, computer software and data visualisation, recording and reporting tools.
+                    I have 8 years processing experience across multiple control systems, computer software and data visualisation, recording and reporting tools. <br>
+                <br>
+                I am participating in SHE{CODES} Plus course to learn coding skills to further my career, and learn how to take my passion for data to a new level.
 
-I am participating in SHE{CODES} Plus course to learn coding skills to further my career, and learn how to take my passion for data to a new level.
-
-Outside of work I value the following, good food, good wine, good company. I do enjoy travelling and trying new life experiences, my bucket list is a bit long but getting there. I have a soft spot for animals and in particular my black and white cat Boots.
+                Outside of work I value the following, good food, good wine and good company. I do enjoy travelling and trying new life experiences, my bucket list is a bit long but getting there. I have a soft spot for animals and in particular my black and white cat Boots.
                 </p>
 
         </section>
