--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <h1>Hello World, I'm Teagan</h1>
             <div>            
-                <img src="images/profile-photo.jpg" alt="Profile" id=photo>
+                <img src="profile-photo.jpg" alt="Profile" id=photo>
             </div>
             <nav>
                 <div class="button"><a href="ts-form-index.html">Contact</a></div>
