fixed linked in link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <nav>
                 <div class="button"><a href="ts-form-index.html">Contact</a></div>
-                <div class="button"><a href="https://www.linkedin.com/in/teagan-schluter/.html">Linked In</a></div>
+                <div class="button"><a href="https://www.linkedin.com/in/teagan-schluter/">Linked In</a></div>
                 <div class="button"><a href="https://t-schluter.github.io/">GitHub</a></div>
             </nav>
         </header>
