Contact form Nav Links

--- a/ts-form-index.html
+++ b/ts-form-index.html
@@ -4,16 +4,21 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Introduction to Forms</title>
+        <title>Teagan Contact Form</title>
         <link rel="stylesheet" href="styles.css">
+        <meta name="Teagan Schluter" content="SheCodes">
     </head>
 
     <body>
         <header>
             <h1>Get in touch!</h1>
+            <nav>
+                <div class="button"><a href="https://t-schluter.github.io/">Home</a></div>
+                <div class="button"><a href="https://www.linkedin.com/in/teagan-schluter/">Linked In</a></div>
+                <div class="button"><a href="https://github.com/T-Schluter/t-schluter.github.io">GitHub</a></div>
+            </nav>
         </header>
 
-                    <!-- your code here -->
          <form action="https://formspree.io/xzbjjjqj" method="POST">
             <div class= "form-item">
                 <label for="name">Name</label>
@@ -32,5 +37,8 @@
                 <button type="submit"> Send!</button>
             </div>
         </form>
+        <footer>
+            Teagan Schluter 2020
+       </footer>
     </body>
 </html>
