--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav>
                 <div class="button"><a href="ts-form-index.html">Contact</a></div>
                 <div class="button"><a href="https://www.linkedin.com/in/teagan-schluter/">Linked In</a></div>
-                <div class="button"><a href="https://t-schluter.github.io/">GitHub</a></div>
+                <div class="button"><a href="https://github.com/T-Schluter/t-schluter.github.io">GitHub</a></div>
             </nav>
         </header>
 
