--- a/ts-form-index.html
+++ b/ts-form-index.html
@@ -11,7 +11,7 @@
 
     <body>
         <header>
-            <h1>Get in touch!</h1>
+            <h1>Get in touch</h1>
             <nav>
                 <div class="button"><a href="https://t-schluter.github.io/">Home</a></div>
                 <div class="button"><a href="https://www.linkedin.com/in/teagan-schluter/">Linked In</a></div>
