--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
             <section>
                 <h2> About Me</h2>
                 <p>
-                    I am currently a Fixed Plant Controller for BHP’s Integrated Remote Operations Center, currently residing in Brisbane. I have a passion for data and it has been there through my entire professional career, starting as a laboratory technician, through to water treatment operator for Origin energy and now as a fixed plant controller.
-
-                    I have 8 years processing experience across multiple control systems, computer software and data visualisation, recording and reporting tools. <br>
+                    I am currently a Fixed Plant Controller for BHP’s Integrated Remote Operations Center (IROC+), based in Brisbane. I have had a passion for data throughout my entire professional career – starting as a laboratory technician through to water treatment operator for Origin energy and now with BHP as a fixed plant controller. I have 8 years processing experience across multiple control systems, computer software and data visualisation, recording and reporting tools.
                 <br>
-                I am participating in SHE{CODES} Plus course to learn coding skills to further my career, and learn how to take my passion for data to a new level.
-
-                Outside of work I value the following, good food, good wine and good company. I do enjoy travelling and trying new life experiences, my bucket list is a bit long but getting there. I have a soft spot for animals and in particular my black and white cat Boots.
+                <br>
+                I am participating in SHE{CODES} Plus program to learn programming skills to further my career, and learn how to take my passion for data, automation and continious improvement to a new level.
+                <br>
+                <br>
+                Outside of work I appreciate good food, good wine and good company. I also enjoy travelling and new life experiences and while my bucket list is long – it is getting there. I have a soft spot for animals and in particular my black and white cat – “Boots”.
                 </p>
 
         </section>
 
         <section>
         <h2>My Portfolio</h2>
-            <div class= "portfolio-item">Portfolio item 1</div>
-            <div class= "portfolio-item">Portfolio item 2</div>
+            <div class= "portfolio-item"><a href="https://github.com/T-Schluter/python-project.git ">Portfolio Item: Python</a></div>
+            <div class= "portfolio-item"><a href="https://github.com/T-Schluter/django-project.git">Portfolio Item: Django</a></div>
             <div class= "portfolio-item">Portfolio item 3</div>
             <div class= "portfolio-item">Portfolio item 4</div>
         </section>
