created links for portfolio items

--- a/index.html
+++ b/index.html
@@ -42,10 +42,14 @@
 
         <section>
         <h2>My Portfolio</h2>
-            <div class= "portfolio-item"><a href="https://github.com/T-Schluter/python-project.git ">Portfolio Item: Python</a></div>
-            <div class= "portfolio-item"><a href="https://github.com/T-Schluter/django-project.git">Portfolio Item: Django</a></div>
-            <div class= "portfolio-item">Portfolio item 3</div>
-            <div class= "portfolio-item">Portfolio item 4</div>
+            <div class= "portfolio-item"><a href="https://github.com/T-Schluter/python-project.git ">Portfolio Item: Python Project Git</a></div>
+            <div class= "portfolio-item"><a href="https://github.com/T-Schluter/django-project.git">Portfolio Item: Django Project Git</a></div>
+            <div class= "portfolio-item"><a href="https://github.com/T-Schluter/dango-rest-framework ">Portfolio Item: Django Rest Framework - Crowdfunding Git</a></div>
+            <div class= "portfolio-item"><a href="https://dashboard.heroku.com/apps/infinite-meadow-48343/resources">Portfolio Item: Deployed Django Rest Framework - Crowdfunding</a></div>
+            <div class= "portfolio-item"><a href="https://github.com/T-Schluter/react-crowdfunding">Portfolio Item: JS React Crowdfunding Project Git</a></div>
+            <div class= "portfolio-item"><a href="https://infinite-meadow-48343.herokuapp.com/projects/">Portfolio Item: Deployed JS React Crowdfunding Project</a></div>
+            <div class= "portfolio-item"><a href="https://agile-lake-74330.herokuapp.com/">Portfolio Item: Deployed Group Project</a></div>
+
         </section>
 
     </main>
